--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.19",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8"
   },
   "scripts": {
     "start": "react-scripts start",
